@@ -1,0 +1,43 @@
+/
+      ./
+      ../
+      CVS/
+      ada.gif	 953	2001/07/21 13:45:46
+      adb.gif	 970	2001/07/21 13:45:46
+      ads.gif	 965	2001/07/21 13:45:44
+      alert.black.gif	 242	2001/07/21 13:45:44
+      alert.red.gif	 247	2001/07/21 13:45:44
+      back.gif	 216	2001/07/21 13:45:42
+      binary.gif	 246	2001/07/21 13:45:42
+      binhex.gif	 246	2001/07/21 13:45:42
+      bomb.gif	 308	2001/07/21 13:45:42
+      break.gif	 64	2001/07/21 13:45:40
+      c.gif	 242	2001/07/21 13:45:40
+      compressed.gif	 1038	2001/07/21 13:45:40
+      dirup.gif	 147	2001/07/21 13:45:40
+      dvi.gif	 238	2001/07/21 13:45:38
+      f.gif	 236	2001/07/21 13:45:38
+      file.gif	 139	2001/07/21 13:45:38
+      file_red.gif	 138	2001/07/21 13:45:38
+      file_sec.gif	 169	2001/07/21 13:45:36
+      folder.gif	 225	2001/07/21 13:45:36
+      folder.open.gif	 242	2001/07/21 13:45:36
+      image1.gif	 274	2001/07/21 13:45:36
+      image2.gif	 309	2001/07/21 13:45:36
+      image3.gif	 286	2001/07/21 13:45:34
+      layout.gif	 276	2001/07/21 13:45:34
+      movie.gif	 243	2001/07/21 13:45:34
+      p.gif	 237	2001/07/21 13:45:34
+      patch.gif	 169	2001/07/21 13:45:34
+      pdf.gif	 173	2001/07/21 13:45:32
+      ps.gif	 162	2001/07/21 13:45:32
+      quill.gif	 166	2001/07/21 13:45:32
+      script.gif	 242	2001/07/21 13:45:32
+      sound1.gif	 248	2001/07/21 13:45:30
+      sound2.gif	 221	2001/07/21 13:45:30
+      tar.gif	 156	2001/07/21 13:45:30
+      tex.gif	 164	2001/07/21 13:45:30
+      text.gif	 153	2001/07/21 13:45:30
+      unknown.gif	 245	2001/07/21 13:45:28
+      uu.gif	 154	2001/07/21 13:45:28
+
