@@ -1,3 +1,8 @@
+2003-01-29  Dmitriy Anisimkov  <anisimkov@yahoo.com>
+
+	* makefile, dirop.adb, dirop,tmplt, dirop.out:
+	Regression test for directory browser.
+
 2003-02-01  Pascal Obry  <p.obry@wanadoo.fr>
 
 	* makefile:
